# f1-pred-modal

./: .gitignore  .pre-commit-config.yaml  LEARNING_GUIDE.md  Makefile  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
data/reference/: entries_2026.csv
notebooks/: data_loading.ipynb  data_organize.ipynb  modal_dev.ipynb
src/f1pred/: __init__.py  cli.py  config.py  data.py  evaluate.py  features.py  logging_utils.py  model.py  paths.py  schema.py
src/f1pred/eval/: __init__.py  backtest.py  metrics.py
src/f1pred/features/: __init__.py  build.py  constructor.py  driver.py  leakage.py  regs2026.py  track.py
src/f1pred/ingest/: __init__.py  cache.py  fastf1_loader.py  run.py
src/f1pred/models/: __init__.py  baselines.py  ranker.py
src/f1pred/predict/: __init__.py  infer.py
tests/: test_cli.py  test_config.py  test_features.py  test_ingest.py  test_leakage.py  test_metrics.py  test_models.py
