[project]
name = "f1pred"
version = "0.1.0"
description = "Predicting 2026 Formula 1 race results (FastF1 + LightGBM)."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "Tushaar Sood" }]

dependencies = [
    # data
    "fastf1>=3.4",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    # modeling
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
    "matplotlib>=3.8",
    "pytest>=8.1",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/f1pred"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
